--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,30 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
-version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  node: circleci/node@4.7
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+working_dir: &working_dir ~/app 
+.build_template: &script
+  steps:
+    - checkout
+    - setup_remote_docker
+    - run:    sleep 3m && docker pull
+    
+version: 2.0 
+jobs: 
+  build: 
+    <<: *script
+    parallelism: 15
+    docker:
+      - image: circleci/python:3.5
+    
+    
+  build2: 
+    <<: *script
+    docker:
+      - image: circleci/python:3.5
+  
+  
+workflows: 
+  version: 2 
+  commit: 
+    jobs: 
+      - build
+      - build2
+     
+    
